--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,11 @@ table > tbody > tr > td:not(:nth-child(1)) {
 table > tbody > tr > td > img {
   height: 70px;
 }
+table > tbody > tr > td > input[type="submit"] {
+  width: 100%;
+  height: 100%;
+  background-color: #36393F;
+}
 table > tbody > tr:hover {
   background: #7289DA;
 }
