--- a/css/style.less
+++ b/css/style.less
@@ -38,6 +38,11 @@ table {
                 >img {
                     height: 70px;
                 }
+                >input[type="submit"] {
+                    width: 100%;
+                    height: 100%;
+                    background-color: @grey;
+                }
             }
             &:hover {
                 background: @blue;
