--- a/css/style.less
+++ b/css/style.less
@@ -14,66 +14,51 @@
 @orange: #F57731;
 @white: #FFFFFF;
 
-table {
+.main-table {
+    height: 100%;
+    width: 100%;
     background-color: @grey;
+}
+
+.scroll {
+    height: 935px;
+    overflow-y: auto;
+}
+
+table {
+    width: 100%;
     box-sizing: border-box;
     color: white; 
-    width: 100%;
     padding: 15px;
     border-collapse: collapse;
-    >tbody {
-        >tr {
-            transition: background 0.5s; 
-            >td {
-                padding: 5px 15px;
-                border-top: 2px solid @darkgrey;
-                transition: 0.5s; 
-                &:nth-child(1) {
-                    text-align: center;
-                }
-                &:not(:nth-child(1)) {
-                    border-left: 2px solid @darkgrey;
-                    transition: 0.5s; 
-                }
-                >img {
-                    height: 70px;
-                }
-                >input[type="submit"] {
-                    width: 100%;
-                    height: 100%;
-                    background-color: @grey;
-                }
-            }
-            &:hover {
-                background: @blue;
-            }
-        }
+    border-bottom: 2px solid @darkgrey;
+    & input{
+        width: 100%;
+        height: 100%;
+        background-color: @grey;
+        color: white;
     }
+    & select {
+        height: 100%;
+        background-color: @grey;
+        color: white;
+    }    
     > thead { 
         >tr {
             transition: background 0.5s; 
             >td, th {
-                padding: 5px 15px;
+                padding: 5px 10px;
                 border-top: 2px solid @darkgrey;
                 transition: 0.5s; 
+                text-align: center;
                 &:not(:nth-child(1)) {
                     border-left: 2px solid @darkgrey;
                     transition: 0.5s; 
                 }
                 >input[type="text"] {
-                    width: 100%;
-                    height: 100%;
                     padding-left: 5px;
-                    background-color: @grey;
-                }
-                >input[type="submit"] {
-                    width: 100%;
-                    height: 100%;
-                    background-color: @grey;
                 }
                 >select {
-                    width: 100%;
-                    background-color: @grey;
                     &.actual{
                         >option[value="0"]
                         {
@@ -91,6 +76,27 @@ table {
             }
         }
     }
+    >tbody {
+        >tr {
+            transition: background 0.5s; 
+            >td {
+                padding: 5px 15px;
+                border-top: 2px solid @darkgrey;
+                transition: 0.5s; 
+                text-align: center;
+                &:not(:nth-child(1)) {
+                    border-left: 2px solid @darkgrey;
+                    transition: 0.5s; 
+                }
+                >img {
+                    height: 70px;
+                }
+            }
+            &:hover {
+                background: @blue;
+            }
+        }
+    }
 }
 
 .product-thumb {
@@ -100,7 +106,7 @@ table {
         justify-content: center;
         align-items: center;
         > a > img {
-            width: 200px;
+            width: 100px;
         }
     }
 }
