--- a/css/_50c36ab27da8bb5ead9c87671a74d2a9.css
+++ b/css/_50c36ab27da8bb5ead9c87671a74d2a9.css
@@ -1,3 +1,17 @@
+.category{
+    left: 0;
+    margin: 0;
+    padding: 1px 0px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1090;
+    background: #fafafa;
+    border-bottom: 1px solid #ccc;
+    box-shadow: 0 5px 5pxrgba(0, 0, 0, 0.15);
+    transition: all 300ms ease-in-out 0s;
+}
+
 .mfp-bg {
     top: 0;
     left: 0;
