--- a/css/style.less
+++ b/css/style.less
@@ -155,6 +155,10 @@ table {
     display: block;
 }
 
+.product-thumb:hover {
+    box-shadow: 0 3px 9px rgb(0 0 0 / 20%);
+}
+
 // Стили сайта
 
 @media (min-width: 992px) {
