--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,9 @@ table > tbody > tr:hover {
 .hide {
   display: block;
 }
+.product-thumb:hover {
+  box-shadow: 0 3px 9px rgba(0, 0, 0, 0.2);
+}
 @media (min-width: 992px) {
   #column-left {
     margin-top: 320px;
