--- a/css/style.css
+++ b/css/style.css
@@ -119,24 +119,6 @@ table > tbody > tr:hover {
     visibility: hidden;
   }
 }
-.modalka-buy {
-  display: block;
-  opacity: 1;
-  background-color: #f9f9f9;
-  border: 1px solid #dfe4eb;
-  border-radius: 4px;
-  width: 600px;
-  height: 520px;
-  position: absolute;
-  top: 50%;
-  left: 25%;
-  z-index: 32131;
-}
-.modalka-buy #close-call {
-  color: black;
-  z-index: 21321;
-  font-size: 49px;
-}
 .buy-hidden {
   opacity: 0.7;
   filter: blur(4px);
@@ -173,6 +155,11 @@ table > tbody > tr:hover {
 }
 .product-thumb:hover {
   box-shadow: 0 3px 9px rgba(0, 0, 0, 0.2);
+}
+.modal-yey {
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
 }
 @media (min-width: 992px) {
   #column-left {
