--- a/css/style.less
+++ b/css/style.less
@@ -348,3 +348,25 @@ table {
     margin-right: 3px;
     margin-bottom: 3px;
 }
+
+.item_searching{
+    position: absolute;
+    top: 59px;
+    left: 5px;
+    z-index: 12312312313123;
+    color: black;
+    word-wrap: break-word;
+    width: 252px;
+    background-color: #f6f6f6;
+    padding: 5px;
+    border-top: 1px solid #f4f4f4;
+    border-bottom: 1px solid #f4f4f4;
+}
+
+#searching{
+    max-width: 240px;
+}
+
+.form-search{
+    display: flex;
+}
