--- a/css/style.less
+++ b/css/style.less
@@ -198,6 +198,18 @@ table {
     height: 100%;
 }
 
+.quantity_price {
+    display: flex;
+    padding-top: 10px;
+    justify-content: center;
+    &_sum {
+        min-width: 50%;
+        font-weight:bolder;
+        white-space: nowrap;
+        overflow: hidden;
+    }
+}
+
 // Стили сайта
 
 @media (min-width: 992px) {
