--- a/css/style.less
+++ b/css/style.less
@@ -58,6 +58,10 @@ table {
                 >input[type="text"] {
                     padding-left: 5px;
                 }
+                >textarea{
+                    background-color: @grey;
+                    color: white;
+                }
                 >select {
                     &.actual{
                         >option[value="0"]
