--- a/css/style.less
+++ b/css/style.less
@@ -115,6 +115,14 @@ table {
     }
 }
 
+.show_cat{
+    display: block !important;
+}
+
+.drop-icon-info{
+    background: none !important;
+}
+
 .connect_php {
     z-index: 223231231;
     position: fixed;
