--- a/css/style.less
+++ b/css/style.less
@@ -115,6 +115,25 @@ table {
     }
 }
 
+#korzina li{
+    display: flex;
+}
+
+.del_elem{
+    margin-left: 8px;
+    color: red;
+    font-weight: 700;
+    cursor: pointer;
+    border: 1px solid silver;
+    border-radius: 4px;
+    height: 26px;
+    padding: 2px;
+}
+
+.del_elem:hover{
+    opacity: 0.7;
+}
+
 .show_cat{
     display: block !important;
 }
