--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,22 @@ table > tbody > tr:hover {
 .product-thumb > .image > a > img {
   width: 100px;
 }
+#korzina li {
+  display: flex;
+}
+.del_elem {
+  margin-left: 8px;
+  color: red;
+  font-weight: 700;
+  cursor: pointer;
+  border: 1px solid silver;
+  border-radius: 4px;
+  height: 26px;
+  padding: 2px;
+}
+.del_elem:hover {
+  opacity: 0.7;
+}
 .show_cat {
   display: block !important;
 }
