--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,13 @@ table > tbody > tr:hover {
 #korzina li {
   display: flex;
 }
+#korzina {
+  width: 449px;
+}
+#korzina span,
+i {
+  margin-left: 8px;
+}
 .del_elem {
   margin-left: 8px;
   color: red;
