--- a/css/style.less
+++ b/css/style.less
@@ -119,6 +119,16 @@ table {
     display: flex;
 }
 
+#korzina{
+    width: 449px;
+
+}
+#korzina span, i{
+    margin-left: 8px;
+}
+
+
+
 .del_elem{
     margin-left: 8px;
     color: red;
