--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
   background-color: #36393F;
 }
 .scroll {
-  height: 935px;
+  height: 892px;
   overflow-y: auto;
 }
 table {
@@ -15,11 +15,30 @@ table {
   border-collapse: collapse;
   border-bottom: 2px solid #2F3136;
 }
-table input {
-  width: 100%;
-  height: 100%;
+table input,
+table button {
+  max-width: 100%;
+  max-height: 100%;
   background-color: #36393F;
   color: white;
+  fill: #FFFFFF;
+  margin: 2px;
+  border-radius: 5px;
+  box-sizing: border-box;
+  transition: 0.5s;
+}
+table input:hover,
+table button:hover {
+  border: 2px solid #7289DA;
+  color: #7289DA;
+  fill: #7289DA;
+  transition: 0.5s;
+}
+table input > svg,
+table button > svg {
+  padding-top: 6px;
+  width: 20px;
+  height: 20px;
 }
 table select {
   height: 100%;
@@ -41,14 +60,22 @@ table > thead > tr th:not(:nth-child(1)) {
   border-left: 2px solid #2F3136;
   transition: 0.5s;
 }
-table > thead > tr > td > input[type="text"],
-table > thead > tr th > input[type="text"] {
+table > thead > tr > td > input,
+table > thead > tr th > input {
   padding-left: 5px;
+  min-height: 30px;
 }
 table > thead > tr > td > textarea,
 table > thead > tr th > textarea {
   background-color: #36393F;
   color: white;
+  width: 438px;
+  height: 60px;
+  resize: none;
+}
+table > thead > tr > td > select,
+table > thead > tr th > select {
+  min-height: 30px;
 }
 table > thead > tr > td > select.actual > option[value="0"],
 table > thead > tr th > select.actual > option[value="0"] {
@@ -64,9 +91,11 @@ table > thead > tr > th {
 table > tbody > tr {
   transition: background 0.5s;
 }
+table > tbody > tr:not(:first-child) {
+  border-top: 2px solid #2F3136;
+}
 table > tbody > tr > td {
   padding: 5px 15px;
-  border-top: 2px solid #2F3136;
   transition: 0.5s;
   text-align: center;
 }
@@ -79,6 +108,101 @@ table > tbody > tr > td > img {
 }
 table > tbody > tr:hover {
   background: #7289DA;
+}
+#modal_edit {
+  position: absolute;
+  top: auto;
+  left: auto;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 99;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#modal_edit > div {
+  display: flex;
+  flex-flow: column;
+  min-width: 500px;
+  min-height: 400px;
+  border: 1px solid #7289DA;
+  border-radius: 5px;
+  background-color: #2F3136;
+  padding: 0 20px;
+}
+#modal_edit > div > h2 {
+  color: #7289DA;
+  padding-bottom: 10px;
+}
+#modal_edit > div > div {
+  display: flex;
+  flex-flow: row;
+  margin: 10px 0;
+  width: 100%;
+}
+#modal_edit > div > div > p {
+  width: 100px;
+  font-weight: bold;
+  text-align: end;
+  color: white;
+  margin-right: 20px;
+  margin-bottom: 0;
+  vertical-align: middle;
+}
+#modal_edit > div > div > input {
+  background-color: #36393F;
+  width: 100%;
+  max-width: 100%;
+  color: white;
+  padding-left: 10px;
+}
+#modal_edit > div > div > textarea {
+  background-color: #36393F;
+  width: 100%;
+  height: 150px;
+  resize: none;
+  color: white;
+  padding-left: 10px;
+}
+#modal_edit > div > div > select {
+  background-color: #36393F;
+  color: white;
+  padding-left: 10px;
+  width: 100%;
+}
+#modal_edit > div > div > select.actual > option[value="0"] {
+  border-radius: 0;
+  color: #F04747;
+}
+#modal_edit > div > div > select.actual > option[value="1"] {
+  border-radius: 0;
+  color: #43B581;
+}
+#modal_edit > div > div.btns {
+  justify-content: start;
+  margin-left: 107.844px;
+}
+#modal_edit > div > div.btns > button {
+  height: 50px;
+  width: 150px;
+  background-color: #2F3136;
+  font-weight: bold;
+  color: white;
+  border: 2px solid white;
+  margin-right: 20px;
+  transition: 0.5s;
+}
+#modal_edit > div > div.btns > button:hover {
+  transition: 0.5s;
+}
+#modal_edit > div > div.btns > button:hover:nth-child(1) {
+  border: 2px solid #43B581;
+  color: #43B581;
+}
+#modal_edit > div > div.btns > button:hover:nth-child(2) {
+  border: 2px solid #F04747;
+  color: #F04747;
 }
 .product-thumb > .image {
   height: 200px;
@@ -314,4 +438,26 @@ i {
 .popular i {
   margin-right: 3px;
   margin-bottom: 3px;
+}
+.oform {
+  position: absolute;
+  left: 31%;
+  top: 0;
+  width: 500px;
+  height: 500px;
+  z-index: 32432434;
+  opacity: 1;
+  background-color: silver;
+}
+.section::-webkit-scrollbar-thumb {
+  border: 5px solid transparent;
+  border-radius: 100px;
+  background-color: #8070d4;
+  background-clip: content-box;
+}
+.section::-webkit-scrollbar-thumb {
+  border: 5px solid transparent;
+  border-radius: 100px;
+  background-color: #8070d4;
+  background-clip: content-box;
 }
