--- a/css/style.less
+++ b/css/style.less
@@ -21,9 +21,10 @@
 }
 
 .scroll {
-    height: 935px;
+    height: 892px;
     overflow-y: auto;
 }
+
 
 table {
     width: 100%;
@@ -32,11 +33,27 @@ table {
     padding: 15px;
     border-collapse: collapse;
     border-bottom: 2px solid @darkgrey;
-    & input{
-        width: 100%;
-        height: 100%;
+    & input, button{
+        max-width: 100%;
+        max-height: 100%;
         background-color: @grey;
         color: white;
+        fill: @white;
+        margin: 2px;
+        border-radius: 5px;
+        box-sizing: border-box;
+        transition: 0.5s;
+        &:hover {
+            border: 2px solid @blue;
+            color: @blue;
+            fill: @blue;
+            transition: 0.5s;
+        }
+        > svg {
+            padding-top: 6px;
+            width: 20px;
+            height: 20px;
+        }
     }
     & select {
         height: 100%;
@@ -55,14 +72,19 @@ table {
                     border-left: 2px solid @darkgrey;
                     transition: 0.5s; 
                 }
-                >input[type="text"] {
+                >input{
                     padding-left: 5px;
+                    min-height: 30px;
                 }
                 >textarea{
                     background-color: @grey;
                     color: white;
+                    width: 438px;
+                    height: 60px;
+                    resize: none;
                 }
                 >select {
+                    min-height: 30px;
                     &.actual{
                         >option[value="0"]
                         {
@@ -83,9 +105,11 @@ table {
     >tbody {
         >tr {
             transition: background 0.5s; 
+            &:not(:first-child){
+                border-top: 2px solid @darkgrey;
+            }
             >td {
                 padding: 5px 15px;
-                border-top: 2px solid @darkgrey;
                 transition: 0.5s; 
                 text-align: center;
                 &:not(:nth-child(1)) {
@@ -98,6 +122,106 @@ table {
             }
             &:hover {
                 background: @blue;
+            }
+        }
+    }
+}
+
+#modal_edit {
+    position: absolute;
+    top: auto;
+    left: auto;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 99;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    > div {
+        display: flex;
+        flex-flow: column;
+        min-width: 500px;
+        min-height: 400px;
+        border: 1px solid @blue;
+        border-radius: 5px;
+        background-color: @darkgrey;
+        padding: 0 20px;
+        > h2 {
+            color: @blue;
+            padding-bottom: 10px;
+        }
+        > div {
+            display: flex;
+            flex-flow: row;
+            margin: 10px 0;
+            width: 100%;
+            > p {
+                width: 100px;
+                font-weight: bold;
+                text-align: end;
+                color: white;
+                margin-right: 20px;
+                margin-bottom: 0;
+                vertical-align: middle;
+            }
+            >input {
+                background-color: @grey;
+                width: 100%;
+                max-width: 100%;
+                color: white;
+                padding-left: 10px;
+            }
+            >textarea{
+                background-color: @grey;
+                width: 100%;
+                height: 150px;
+                resize: none;
+                color: white;
+                padding-left: 10px;
+            }
+            >select {
+                background-color: @grey;
+                color: white;
+                padding-left: 10px;
+                width: 100%;
+                &.actual{
+                    >option[value="0"]
+                    {
+                        border-radius: 0;
+                        color: @red;
+                    }
+                    >option[value="1"]
+                    {
+                        border-radius: 0;
+                        color: @green;
+                    }
+                }
+            }
+            &.btns {
+                justify-content: start;
+                margin-left: 107.844px;
+                > button{
+                    height: 50px;
+                    width: 150px;
+                    background-color: @darkgrey;
+                    font-weight: bold;
+                    color: white;
+                    border: 2px solid white;
+                    margin-right: 20px;
+                    transition: 0.5s;
+                    &:hover {
+                        transition: 0.5s;
+                        &:nth-child(1) {
+                            border: 2px solid @green;
+                            color: @green;
+                        }
+                        &:nth-child(2) {
+                            border: 2px solid @red;
+                            color: @red;
+                        }
+                    }
+                }
             }
         }
     }
@@ -390,4 +514,29 @@ table {
 .popular i {
     margin-right: 3px;
     margin-bottom: 3px;
+}
+
+.oform{
+        position: absolute;
+        left: 31%;
+        top: 0;
+        width: 500px;
+        height: 500px;
+        z-index: 32432434;
+        opacity: 1;
+        background-color: silver;
+}
+
+.section::-webkit-scrollbar-thumb {
+ border: 5px solid transparent;
+ border-radius: 100px;
+ background-color: #8070d4;
+ background-clip: content-box;
+}
+
+.section::-webkit-scrollbar-thumb {
+    border: 5px solid transparent;
+    border-radius: 100px;
+    background-color: #8070d4;
+    background-clip: content-box;
 }
