--- a/css/style.less
+++ b/css/style.less
@@ -20,6 +20,10 @@
     background-color: @grey;
 }
 
+.mfp-content{
+    margin: 50px auto !important;
+}
+
 .scroll {
     height: 892px;
     overflow-y: auto;
